Digital inputs commands built fixed and digital input read fixed

--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -220,7 +220,7 @@
                             <div class="form-row">
                                 <div class="form-group col-sm-6">
                                     <label for="DigitalIn1Select" class="col-form-label-sm">Digital Input 1</label>
-                                    <select class="form-control form-control-sm" name="DigitalIn1Select" id="DigitalIn1Select" group="digital_input_options">
+                                    <select class="form-control form-control-sm" name="DigitalIn1Select" id="DigitalIn1Select" group="digital_input_1">
                                         <option value="0">Disabled</option>
                                         <option value="1">Rising Edge</option>
                                         <option value="2">Falling Edge</option>
@@ -229,7 +229,7 @@
                                 </div>
                                 <div class="form-group col-sm-6">
                                     <label for="DigitalIn2Select" class="col-form-label-sm">Digital Input 2</label>
-                                    <select class="form-control form-control-sm" name="DigitalIn2Select" id="DigitalIn2Select" group="digital_input_options">
+                                    <select class="form-control form-control-sm" name="DigitalIn2Select" id="DigitalIn2Select" group="digital_input_2">
                                         <option value="0">Disabled</option>
                                         <option value="1">Rising Edge</option>
                                         <option value="2">Falling Edge</option>
