--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -50,15 +50,15 @@
                         <div class="card-body">
                             <div class="form-row">
                                 <div class="form-group col-sm-4">
-                                    <label for="Horas" class="col-form-label-sm">Horas</label>
+                                    <label for="Horas" class="col-form-label-sm">Hours</label>
                                     <input type="number"  class="form-control form-control-sm" name="Horas" id="Horas" min="0" max="23" placeholder="0" value="0" group="time_transmition">
                                 </div>
                                 <div class="form-group col-sm-4">
-                                    <label for="Minutos" class="col-form-label-sm">Minutos</label>
+                                    <label for="Minutos" class="col-form-label-sm">Minutes</label>
                                     <input type="number" class="form-control form-control-sm" name="Minutos" id="Minutos" min="0" max="59" placeholder="0" value="0" group="time_transmition">
                                 </div>
                                 <div class="form-group col-sm-4">
-                                    <label for="Segundos" class="col-form-label-sm">Segundos</label>
+                                    <label for="Segundos" class="col-form-label-sm">Seconds</label>
                                     <input type="number" class="form-control form-control-sm" name="Segundos" id="Segundos" min="0" max="60" placeholder="0" value="0" group="time_transmition">
                                 </div>
                                 <div class="form-group col-sm-5">
