--- a/src/components/dashboard2/dashboard2.html
+++ b/src/components/dashboard2/dashboard2.html
@@ -52,24 +52,24 @@
                         <div class="card-body">
                             <div class="form-row">
                                 <div class="form-group col-sm-4">
-                                    <label for="Horas" class="col-form-label-sm">Horas</label>
+                                    <label for="Horas" class="col-form-label-sm">Hours</label>
                                     <input type="number"  class="form-control form-control-sm" name="Horas" id="d2_Horas" min="0" max="23" placeholder="0" value="0" group="time_transmition">
                                 </div>
                                 <div class="form-group col-sm-4">
-                                    <label for="Minutos" class="col-form-label-sm">Minutos</label>
+                                    <label for="Minutos" class="col-form-label-sm">Minutes</label>
                                     <input type="number" class="form-control form-control-sm" name="Minutos" id="d2_Minutos" min="0" max="59" placeholder="0" value="0" group="time_transmition">
                                 </div>
                                 <div class="form-group col-sm-4">
-                                    <label for="Segundos" class="col-form-label-sm">Segundos</label>
-                                    <input type="number" class="form-control form-control-sm" name="Segundos" id="d2_Segundos" min="0" max="59" placeholder="0" value="0" group="time_transmition">
+                                    <label for="Segundos" class="col-form-label-sm">Seconds</label>
+                                    <input type="number" class="form-control form-control-sm" name="Segundos" id="d2_Segundos" min="0" max="60" placeholder="0" value="0" group="time_transmition">
                                 </div>
                                 <div class="form-group col-sm-5">
                                     <label for="keepAlive" class="col-form-label-sm">keep Alive(n)</label>
                                     <input type="number" class="form-control form-control-sm" name="keepAlive" id="d2_keepAlive" min="0" max="59" placeholder="0" value="0" group="keep_alive">
                                 </div>
-                                <div class="form-group col-sm-4">
-                                    <label for="TimeKeep" class="col-form-label-sm">Time</label>
-                                    <input type="text" class="form-control form-control-sm" name="TimeKeep" id="d2_TimeKeep" placeholder="0" disabled>
+                                <div class="form-group col-sm-6">
+                                    <label for="TimeKeep" class="col-form-label-sm">Time d:h:m:s</label>
+                                    <input type="text" class="form-control form-control-sm" name="TimeKeep" id="d2_TimeKeep" placeholder="dd/hh/mm/ss" disabled>
                                 </div>
                             </div>
                         </div>
@@ -83,19 +83,15 @@
                         <div class="card-body">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="AlwaysReportSwitch" id="d2_AlwaysReportSwitch" group="always_report_switch" >
-                                <label class="custom-control-label" for="AlwaysReportSwitch">Always Send report</label>
+                                <label class="custom-control-label" for="d2_AlwaysReportSwitch">Always Send report</label>
                             </div>
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="DownLinkSwitch" id="d2_DownLinkSwitch" group="down_link_switch">
-                                <label class="custom-control-label" for="DownLinkSwitch">Downlink Enable</label>
+                                <label class="custom-control-label" for="d2_DownLinkSwitch">Downlink Enable</label>
                             </div>
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="RedundantMsnSwitch" id="d2_RedundantMsnSwitch" group="redundant_msn_switch">
-                                <label class="custom-control-label" for="RedundantMsnSwitch">Redundant Messge</label>
-                            </div>
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" name="OnlySendSwitch" id="d2_OnlySendSwitch" group="only_send_switch">
-                                <label class="custom-control-label" for="OnlySendSwitch">Only Send location</label>
+                                <label class="custom-control-label" for="d2_RedundantMsnSwitch">Redundant Messge</label>
                             </div>
                         </div>
                     </div>
@@ -252,7 +248,7 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="form-row">
-                                <div class="col-sm-10"><strong>Air Quality</strong></div>
+                                <div class="col-sm-10"><strong>Air Quality ()</strong></div>
                                 <div class="custom-control custom-switch">
                                     <input type="checkbox" name="enabled" class="custom-control-input" id="d2_QualitySwitch" group="Quality">
                                     <label class="custom-control-label" for="d2_QualitySwitch"></label>
@@ -263,14 +259,14 @@
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="Quality1RangeMax" class="col-form-label-sm col-sm-2">Max</label>
-                                    <input type="range" class="form-control-range" name="QualityRangeMax" id="d2_AnalogRangeMax" step="1" min="0" max="4096" value="4096" disabled group="Quality">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog1spanMax" id="d2_Analog1spanMax">4096</span>
+                                    <input type="range" class="form-control-range" name="QualityRangeMax" id="d2_AnalogRangeMax" step="1" min="0" max="100" value="100" disabled group="Quality">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog1spanMax" id="d2_Analog1spanMax">100</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="QualityRangeMin" class="col-form-label-sm col-sm-2">Min</label>
-                                    <input type="range" class="form-control-range" name="AnalogRangeMin" id="d2_QualityRangeMin" step="1" min="0" max="4096" value="0" disabled group="Quality">
+                                    <input type="range" class="form-control-range" name="AnalogRangeMin" id="d2_QualityRangeMin" step="1" min="0" max="100" value="0" disabled group="Quality">
                                     <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="QualityspanMin" id="d2_QualityspanMin">0</span>
                                 </div>
                             </div>
