dashboard2.js file updated

--- a/src/components/dashboard2/dashboard2.html
+++ b/src/components/dashboard2/dashboard2.html
@@ -114,14 +114,14 @@
                                 <div class="form-row">
                                     <label for="Analog1RangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="Analog1RangeMax" id="d2_Analog1RangeMax" step="1" min="0" max="4096" value="4096" disabled group="analog_input_1">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog1spanMax" id="d2_Analog1spanMax">4096</span>
+                                    <span class="badge col-sm-2 offset-sm-1 mb-2" name="Analog1spanMax" id="d2_Analog1spanMax" style="background-color: #6c757d; color: #fff;">4096</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="Analog1RangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="Analog1RangeMin" id="d2_Analog1RangeMin" step="1" min="0" max="4096" value="0" disabled group="analog_input_1">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog1spanMin" id="d2_Analog1spanMin">0</span>
+                                    <span class="badge col-sm-2 offset-sm-1 mb-2" name="Analog1spanMin" id="d2_Analog1spanMin" style="background-color: #6c757d; color: #fff;">0</span>
                                 </div>
                             </div>
                         </div>
@@ -145,14 +145,14 @@
                                 <div class="form-row">
                                     <label for="Analog2RangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="Analog2RangeMax" id="d2_Analog2RangeMax" step="1" max="4096" value="4096" disabled group="analog_input_2">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog2spanMax" id="d2_Analog2spanMax">4096</span>
+                                    <span class="badge col-sm-2 offset-sm-1 mb-2" name="Analog2spanMax" id="d2_Analog2spanMax" style="background-color: #6c757d; color: #fff;" >4096</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="Analog2RangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="Analog2RangeMin" id="d2_Analog2RangeMin" step="1" max="4096" value="0" disabled group="analog_input_2"> 
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog2spanMin" id="d2_Analog2spanMin">0</span>
+                                    <span class="badge col-sm-2 offset-sm-1 mb-2" name="Analog2spanMin" id="d2_Analog2spanMin" style="background-color: #6c757d; color: #fff;">0</span>
                                 </div>
                             </div>
                         </div>
@@ -259,15 +259,15 @@
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="Quality1RangeMax" class="col-form-label-sm col-sm-2">Max</label>
-                                    <input type="range" class="form-control-range" name="QualityRangeMax" id="d2_AnalogRangeMax" step="1" min="0" max="100" value="100" disabled group="Quality">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog1spanMax" id="d2_Analog1spanMax">100</span>
+                                    <input type="range" class="form-control-range" name="QualityRangeMax" id="d2_QualityRangeMax" step="1" min="0" max="100" value="100" disabled group="Quality">
+                                    <span class="badge col-sm-2 offset-sm-1 mb-2" name="Analog1spanMax" id="d2_QualityspanMax" style="background-color: #6c757d; color: #fff;">100</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="QualityRangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="AnalogRangeMin" id="d2_QualityRangeMin" step="1" min="0" max="100" value="0" disabled group="Quality">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="QualityspanMin" id="d2_QualityspanMin">0</span>
+                                    <span class="badge col-sm-2 offset-sm-1 mb-2" name="QualityspanMin" id="d2_QualityspanMin" style="background-color: #6c757d; color: #fff;">0</span>
                                 </div>
                             </div>
                         </div>
