--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -5,7 +5,7 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="title-dashboard">iButton Isquare </h1>
+                        <h1 class="title-dashboard">Isquare </h1>
                     </div>
                     <div class="card-body">
                         <div class="form-row">
