Test on Linux OS - Updating remote repositories

--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -5,7 +5,7 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="title-dashboard">Isquare </h1>
+                        <h1 class="title-dashboard">ISQUARE </h1>
                     </div>
                     <div class="card-body">
                         <div class="form-row">
@@ -66,7 +66,7 @@
                                     <input type="number" class="form-control form-control-sm" name="keepAlive" id="keepAlive" min="0" max="59" placeholder="0" value="0" group="keep_alive">
                                 </div>
                                 <div class="form-group col-sm-6">
-                                    <label for="TimeKeep" class="col-form-label-sm">Time d:h:m:s</label>
+                                    <label for="TimeKeep" class="col-form-label-sm">Time D:H:M:S</label>
                                     <input type="text" class="form-control form-control-sm" name="TimeKeep" id="TimeKeep" placeholder="dd/hh/mm/ss" disabled>
                                 </div>
                             </div>
@@ -81,27 +81,27 @@
                         <div class="card-body">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="WiFiSwitch" id="WiFiSwitch" group="wifi_switch">
-                                <label class="custom-control-label" for="WiFiSwitch">Report Wi-Fi Location</label>
+                                <label class="custom-control-label" for="WiFiSwitch">Report Wi-Fi location</label>
                             </div>
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="AlwaysReportSwitch" id="AlwaysReportSwitch" group="always_report_switch" >
-                                <label class="custom-control-label" for="AlwaysReportSwitch">Always Send report</label>
+                                <label class="custom-control-label" for="AlwaysReportSwitch">Always send report</label>
                             </div>
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="DownLinkSwitch" id="DownLinkSwitch" group="down_link_switch">
-                                <label class="custom-control-label" for="DownLinkSwitch">Downlink Enable</label>
+                                <label class="custom-control-label" for="DownLinkSwitch">Downlink enable</label>
                             </div>
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="RedundantMsnSwitch" id="RedundantMsnSwitch" group="redundant_msn_switch">
-                                <label class="custom-control-label" for="RedundantMsnSwitch">Redundant Messge</label>
+                                <label class="custom-control-label" for="RedundantMsnSwitch">Redundant message</label>
                             </div>
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="OnlySendSwitch" id="OnlySendSwitch" group="only_send_switch">
-                                <label class="custom-control-label" for="OnlySendSwitch">Only Send location</label>
+                                <label class="custom-control-label" for="OnlySendSwitch">Only send location</label>
                             </div>
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" name="GPSSwitch" id="gpsSwitch" group="gps_switch">
-                                <label class="custom-control-label" for="gpsSwitch">Report GPS Location</label>
+                                <label class="custom-control-label" for="gpsSwitch">Report GPS location</label>
                             </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <div class="form-row">
-                                <div class="col-sm-10"><strong>Battery (%) (mah)</strong></div>
+                                <div class="col-sm-10"><strong>Battery (%) (mAh)</strong></div>
                             </div>
                         </div>
                         <div class="card-body">
