--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -178,7 +178,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <div class="form-row">
-                                <div class="col-sm-10"><strong>Battery (%) (mAh)</strong></div>
+                                <div class="col-sm-10"><strong>Battery (%) (mV)</strong></div>
                             </div>
                         </div>
                         <div class="card-body">
@@ -310,8 +310,8 @@
                             <div class="form-group">
                                 <label for="ZoneSelect" class="col-form-label-sm">Zone</label>
                                 <select class="form-control form-control-sm" name="ZoneSelect" id="ZoneSelect" group="sigfox_zone">
-                                    <option value="1">RCZ2</option>
-                                    <option value="2">RCZ4</option>
+                                    <option value="2">RCZ2</option>
+                                    <option value="3">RCZ4</option>
                                 </select>
                             </div>
                         </div>
@@ -485,7 +485,7 @@
             <div class="row">
                 <!-- <input id="dashboard1-submit" type="submit"> </input> -->
                 <div class="col-sm-6 mb-4">
-                    <button type="submit" class="btn btn-outline-primary btn-Download_Read col" id="DownLoad">DownLoad</button>
+                    <button type="submit" class="btn btn-outline-primary btn-Download_Read col" id="DownLoad" >DownLoad</button>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="progress_Bar"></div>
                     </div>
